# mysql-replication-example

./: README.md
binlog_base_replication/: Makefile  README.md  compose.yml
binlog_base_replication/master/: master.conf
binlog_base_replication/master/scripts/: seed.sh  setup.sh  show_binlog_info.sh
binlog_base_replication/scripts/: configure.sh
binlog_base_replication/slave/: login.conf  slave.conf
binlog_base_replication/slave/scripts/: replication.base.sh  setup.sh
debezium_cdc_replication/: Dockerfile  Makefile  README.md  compose.yml
debezium_cdc_replication/connector/: deploy.sh  sink_connector.json  source_connector.json
debezium_cdc_replication/consumer/: Cargo.toml
debezium_cdc_replication/consumer/src/: main.rs
debezium_cdc_replication/master/: master.conf
debezium_cdc_replication/master/scripts/: seed.sh  setup.sh
debezium_cdc_replication/slave/: slave.conf
debezium_cdc_replication/slave/scripts/: replication.sh  select.sh  setup.sh  status.sh
gtid_base_replication/: Makefile  README.md  compose.yml
gtid_base_replication/master/: login.conf  master.conf
gtid_base_replication/master/scripts/: seed.sh  setup.sh  status.sh
gtid_base_replication/slave/: slave.conf
gtid_base_replication/slave/scripts/: replication.sh
