[package]
name = "kafka_consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = { version = "0.9" }
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1.11", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
